# Badminton-Booker

./: .env.example  .secrets.example  GITHUB_ACTIONS_SETUP.md  README.MD  book.py  get_chat_ids.sh  main.py  notify.py  pyproject.toml  requirements.txt
.github/workflows/: badminton_booking.yml  update_chat_ids.yml
badminton_booker/booking/: courts.py  handle_time.py
badminton_booker/cli/: commands.py
badminton_booker/config/: settings.py
badminton_booker/datastore/: chat_id_service.py
badminton_booker/notification/: telegram.py
docs/: .env.example  .secrets.example  GITHUB_ACTIONS_SETUP.md
tests/: test_booking.py  test_chat_id_service.py  test_config.py  test_notification.py
